fixing jump

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 #game
 {
-	width: 480px;
+	width: 960px;
 	height: 200px;
 	border: 1px solid black;
 }
@@ -23,8 +23,8 @@
 @keyframes jump
 {
 	0%{top: 150px;}
-	30%{top: 100px;}
-	70%{top: 100px;}
+	30%{top: 80px;}
+	70%{top: 80px;}
 	100%{top: 150px;}
 }
 
@@ -40,12 +40,12 @@
 	background-color: green;
 	position: relative;
 	top: 130px;
-	left: 460px;
+	left: 940px;
 	animation: block 1s infinite;
 }
 
 @keyframes block
 {
-	0%{left: 460px;}
+	0%{left: 940px;}
 	100%{left: -40px;}
 }
